--- a/.github/workflows/preview.yml
+++ b/.github/workflows/preview.yml
@@ -33,28 +33,12 @@ jobs:
       run: |
         test -f ${{ env.doc_name }}-draft.pdf
         test -f ${{ env.doc_name }}.bbl
-    
-    - name: Move the auto-pdf-preview tag
-      uses: weareyipyip/walking-tag-action@v2
+    - name: Keep the PDF artefact 
+      uses: actions/upload-artifact@v1
       with:
-        tag-name: auto-pdf-preview
-        tag-message: |
-          Last commit taken into account for the automatically updated PDF preview of this IVOA document.
-      env:
-        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-    
-    - name: Update the PDF preview
-      uses: Xotl/cool-github-releases@v1
-      with:
-        mode: update
-        isPrerelease: true
-        tag_name: auto-pdf-preview
-        release_name: "Auto PDF Preview"
-        body_mrkdwn: |
-          This release aims to provide a PDF preview of the last commit applied on this repository.
-          It will be updated automatically after each merge of a PullRequest.
-          **DO NOT PUBLISH THIS PRE-RELEASE!**"
-          _Corresponding commit: ${{ github.sha }}_
-        assets: ${{ env.doc_name }}-draft.pdf
-        replace_assets: true
-        github_token: ${{ secrets.GITHUB_TOKEN }}
+        name: PDF Preview
+        path: ${{ env.doc_name }}.pdf
+     
+
+        
+  
